creacion del header web mobile

--- a/index.html
+++ b/index.html
@@ -1,11 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Sacramento&family=Spinnaker&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./estilos/generales.css">
+  <link rel="stylesheet" href="./estilos/header.css">
+  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
   <title>Document</title>
 </head>
+
 <body>
-  
+  <header>
+    <section class="header-contain">
+      <div class="header-web">
+        <div class="search">
+          <a href="#"><img src="./assets/tiendamia-logo.svg" alt="logo"></a>
+          <input type="text" placeholder="search">
+          <nav class="rrss">
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+          </nav>
+        </div>
+        <nav class="navegation">
+          <a href="#">como comprar</a>
+          <a href="#">costos y tarifas</a>
+          <a href="#">mis pedidos</a>
+          <a href="#">garantia</a>
+        </nav>
+      </div>
+      <div class="header-mobile">
+        <div class="search-mobile">
+          <img src="./assets/tiendamia-logo.svg" alt="logo">
+          <input type="text" placeholder="search">
+          <div class="bar">
+            <!-- <i class="fa-solid fa-caret-down"></i> -->
+          </div>
+        </div>
+        <nav class="nav-rrss">
+          <div class="rrss">
+            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+          </div>
+          <a href="#">como comprar</a>
+          <a href="#">costos y tarifas</a>
+          <a href="#">mis pedidos</a>
+          <a href="#">garantia</a>
+        </nav>
+      </div>
+    </section>
+    <box-icon type='logo' name='facebook-square'></box-icon>
+  </header>
+
+
+
+
+
+  <script src="https://kit.fontawesome.com/f1892a5318.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
