--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./estilos/generales.css">
   <link rel="stylesheet" href="./estilos/header.css">
   <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+  <link rel="stylesheet" href="./estilos/banner-main.css">
   <title>Document</title>
 </head>
 
@@ -43,7 +44,7 @@
             <!-- <i class="fa-solid fa-caret-down"></i> -->
           </div>
         </div>
-        <nav class="nav-rrss">
+        <nav class="nav-rrss" style="top: -80px;">
           <div class="rrss">
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -56,13 +57,22 @@
         </nav>
       </div>
     </section>
-    <box-icon type='logo' name='facebook-square'></box-icon>
+    
   </header>
 
+  <main>
+    <section class="banner-promociones">
+      <div class="cont-3images">
+        <div class="c1 a"></div>
+        <div class="c2 a"></div>
+        <div class="c3 a"></div>
+        <div class="c4 a"></div>
+      </div>
+    </section>
+  </main>
 
 
-
-
+  <script src="./scripts/headerScrol.js"></script>
   <script src="https://kit.fontawesome.com/f1892a5318.js" crossorigin="anonymous"></script>
 </body>
 
