creacion del main card

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
           </div>
         </div>
         <nav class="nav-rrss" style="top: -80px;">
-          <div class="rrss">
+          <div class="rrss-mobile">
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
           </div>
-          <a href="#">como comprar</a>
-          <a href="#">costos y tarifas</a>
-          <a href="#">mis pedidos</a>
-          <a href="#">garantia</a>
+          <a href="#" class="enlace">como comprar</a>
+          <a href="#" class="enlace">costos y tarifas</a>
+          <a href="#" class="enlace">mis pedidos</a>
+          <a href="#" class="enlace">garantia</a>
         </nav>
       </div>
     </section>
@@ -68,6 +68,99 @@
         <div class="c3 a"></div>
         <div class="c4 a"></div>
       </div>
+    </section>
+
+
+    <section class="card-container">
+      <a href="#">
+        <div class="card">
+          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
+          <div class="info-card">
+            <h1>MacBook Pro 15'4</h1>
+            <span>Space Gray</span>
+            <div class="price">
+              <h1>$750.000</h1>
+              <span>50% Off</span>
+            </div>
+            <span>Incluye inpuestos Pais y percepcion AFIP</span>
+          </div>
+        </div>
+      </a>
+
+      <a href="#">
+        <div class="card">
+          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
+          <div class="info-card">
+            <h1>MacBook Pro 15'4</h1>
+            <span>Space Gray</span>
+            <div class="price">
+              <h1>$750.000</h1>
+              <span>50% Off</span>
+            </div>
+            <span>Incluye inpuestos Pais y percepcion AFIP</span>
+          </div>
+        </div>
+      </a>
+
+      <a href="#">
+        <div class="card">
+          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
+          <div class="info-card">
+            <h1>MacBook Pro 15'4</h1>
+            <span>Space Gray</span>
+            <div class="price">
+              <h1>$750.000</h1>
+              <span>50% Off</span>
+            </div>
+            <span>Incluye inpuestos Pais y percepcion AFIP</span>
+          </div>
+        </div>
+      </a>
+
+      <a href="#">
+        <div class="card">
+          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
+          <div class="info-card">
+            <h1>MacBook Pro 15'4</h1>
+            <span>Space Gray</span>
+            <div class="price">
+              <h1>$750.000</h1>
+              <span>50% Off</span>
+            </div>
+            <span>Incluye inpuestos Pais y percepcion AFIP</span>
+          </div>
+        </div>
+      </a>
+
+      <a href="#">
+        <div class="card">
+          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
+          <div class="info-card">
+            <h1>MacBook Pro 15'4</h1>
+            <span>Space Gray</span>
+            <div class="price">
+              <h1>$750.000</h1>
+              <span>50% Off</span>
+            </div>
+            <span>Incluye inpuestos Pais y percepcion AFIP</span>
+          </div>
+        </div>
+      </a>
+
+      <a href="#">
+        <div class="card">
+          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
+          <div class="info-card">
+            <h1>MacBook Pro 15'4</h1>
+            <span>Space Gray</span>
+            <div class="price">
+              <h1>$750.000</h1>
+              <span>50% Off</span>
+            </div>
+            <span>Incluye inpuestos Pais y percepcion AFIP</span>
+          </div>
+        </div>
+      </a>
     </section>
   </main>
 
