tratando de corregir header sacrol

--- a/index.html
+++ b/index.html
@@ -44,17 +44,19 @@
             <!-- <i class="fa-solid fa-caret-down"></i> -->
           </div>
         </div>
-        <nav class="nav-rrss" style="top: -80px;">
-          <div class="rrss-mobile">
-            <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
-          </div>
-          <a href="#" class="enlace">como comprar</a>
-          <a href="#" class="enlace">costos y tarifas</a>
-          <a href="#" class="enlace">mis pedidos</a>
-          <a href="#" class="enlace">garantia</a>
-        </nav>
+        <div class="cont-nav-rrss">
+          <nav class="nav-rrss" style="top: -80px;">
+            <div class="rrss-mobile">
+              <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
+            </div>
+            <a href="#" class="enlace">como comprar</a>
+            <a href="#" class="enlace">costos y tarifas</a>
+            <a href="#" class="enlace">mis pedidos</a>
+            <a href="#" class="enlace">garantia</a>
+          </nav>
+        </div>
       </div>
     </section>
     
