creacion de la ruta details

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./estilos/generales.css">
   <link rel="stylesheet" href="./estilos/header.css">
-  <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+  
   <link rel="stylesheet" href="./estilos/banner-main.css">
+  <link rel="stylesheet" href="./estilos/footer.css">
   <title>Document</title>
 </head>
 
@@ -21,7 +22,7 @@
     <section class="header-contain">
       <div class="header-web">
         <div class="search">
-          <a href="#"><img src="./assets/tiendamia-logo.svg" alt="logo"></a>
+          <a href="./index.html"><img src="./assets/tiendamia-logo.svg" alt="logo"></a>
           <input type="text" placeholder="search">
           <nav class="rrss">
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
@@ -38,14 +39,14 @@
       </div>
       <div class="header-mobile">
         <div class="search-mobile">
-          <img src="./assets/tiendamia-logo.svg" alt="logo">
+          <a href="./index.html"><img src="./assets/tiendamia-logo.svg" alt="logo"></a>
           <input type="text" placeholder="search">
           <div class="bar">
             <!-- <i class="fa-solid fa-caret-down"></i> -->
           </div>
         </div>
-        <div class="cont-nav-rrss">
-          <nav class="nav-rrss" style="top: -80px;">
+        <div class="cont-nav-rrss" style="top: -80px;">
+          <nav class="nav-rrss">
             <div class="rrss-mobile">
               <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
               <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -59,7 +60,7 @@
         </div>
       </div>
     </section>
-    
+
   </header>
 
   <main>
@@ -74,7 +75,7 @@
 
 
     <section class="card-container">
-      <a href="#">
+      <a href="./rutas/details.html">
         <div class="card">
           <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
           <div class="info-card">
@@ -89,7 +90,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="./rutas/details.html">
         <div class="card">
           <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
           <div class="info-card">
@@ -104,7 +105,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="./rutas/details.html">
         <div class="card">
           <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
           <div class="info-card">
@@ -119,7 +120,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="./rutas/details.html">
         <div class="card">
           <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
           <div class="info-card">
@@ -134,7 +135,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="./rutas/details.html">
         <div class="card">
           <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
           <div class="info-card">
@@ -149,7 +150,7 @@
         </div>
       </a>
 
-      <a href="#">
+      <a href="./rutas/details.html">
         <div class="card">
           <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
           <div class="info-card">
@@ -166,6 +167,29 @@
     </section>
   </main>
 
+  <footer>
+    <section class="footer-wrap">
+      <div class="como-comprar cont">
+        <h1>como comprar</h1>
+        <p>formas de pago</p>
+        <p>envios</p>
+        <p>devoluciones</p>
+      </div>
+      <div class="costos-envios cont">
+        <h1>costos y envios</h1>
+        <p>inpuestos</p>
+        <p>facturacion</p>
+      </div>
+      <div class="mis-pedidos cont">
+        <h1>mis pedidos</h1>
+        <p>pedir nuevamente</p>
+        <p>lista de deseos</p>
+      </div>
+      <div class="garantia cont">
+        <h1>garantia</h1>
+      </div>
+    </section>
+  </footer>
 
   <script src="./scripts/headerScrol.js"></script>
   <script src="https://kit.fontawesome.com/f1892a5318.js" crossorigin="anonymous"></script>
