--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           </nav>
         </div>
         <nav class="navegation">
-          <a href="#">como comprar</a>
+          <!-- <a href="#">como comprar</a>
           <a href="#">costos y tarifas</a>
           <a href="#">mis pedidos</a>
-          <a href="#">garantia</a>
+          <a href="#">garantia</a> -->
         </nav>
       </div>
       <div class="header-mobile">
@@ -192,6 +192,12 @@
     </section>
   </footer>
 
+
+
+
+
+
+  <script src="./scripts/nav-render.js"></script>
   <script src="./scripts/headerScrol.js"></script>
   <script src="https://kit.fontawesome.com/f1892a5318.js" crossorigin="anonymous"></script>
 </body>
