creacion de las cards con js

--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
       </div>
     </section>
 
-
     <section class="card-container">
-      <a href="./rutas/details.html">
+      <!-- <a href="./rutas/details.html">
         <div class="card">
           <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
           <div class="info-card">
@@ -164,7 +163,7 @@
             <span>Incluye inpuestos Pais y percepcion AFIP</span>
           </div>
         </div>
-      </a>
+      </a> -->
     </section>
   </main>
 
@@ -200,6 +199,7 @@
   <script src="./scripts/nav-render.js"></script>
   <script src="./scripts/headerScrol.js"></script>
   <script src="https://kit.fontawesome.com/f1892a5318.js" crossorigin="anonymous"></script>
+  <script src="./scripts/product-card.js"></script>
 </body>
 
 </html>
