--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./estilos/generales.css">
   <link rel="stylesheet" href="./estilos/header.css">
-  
+
   <link rel="stylesheet" href="./estilos/banner-main.css">
   <link rel="stylesheet" href="./estilos/footer.css">
-  
+
   <title>Document</title>
 </head>
 
@@ -24,7 +24,7 @@
       <div class="header-web">
         <div class="search">
           <a href="./index.html"><img src="./assets/tiendamia-logo.svg" alt="logo"></a>
-          <input type="text" placeholder="search">
+          <input type="text" placeholder="search" class="search-inp">
           <nav class="rrss">
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -74,96 +74,19 @@
       </div>
     </section>
 
+    <!-- <a href="./rutas/details.html">
+      <div class="card"><img src="./assets/mock2.jpg" style="max-width: 250px;">
+        <div class="info-card">
+          <h1>MackBook Pro 15'4</h1><span>Space Gray</span>
+          <div class="price">
+            <h1>$750.000</h1><span>50% Off</span>
+          </div><span>Incluye impuestos Pais y percepcion AFIP</span>
+        </div>
+      </div>
+    </a> -->
+
     <section class="card-container">
-      <!-- <a href="./rutas/details.html">
-        <div class="card">
-          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
-          <div class="info-card">
-            <h1>MacBook Pro 15'4</h1>
-            <span>Space Gray</span>
-            <div class="price">
-              <h1>$750.000</h1>
-              <span>50% Off</span>
-            </div>
-            <span>Incluye inpuestos Pais y percepcion AFIP</span>
-          </div>
-        </div>
-      </a>
 
-      <a href="./rutas/details.html">
-        <div class="card">
-          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
-          <div class="info-card">
-            <h1>MacBook Pro 15'4</h1>
-            <span>Space Gray</span>
-            <div class="price">
-              <h1>$750.000</h1>
-              <span>50% Off</span>
-            </div>
-            <span>Incluye inpuestos Pais y percepcion AFIP</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="./rutas/details.html">
-        <div class="card">
-          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
-          <div class="info-card">
-            <h1>MacBook Pro 15'4</h1>
-            <span>Space Gray</span>
-            <div class="price">
-              <h1>$750.000</h1>
-              <span>50% Off</span>
-            </div>
-            <span>Incluye inpuestos Pais y percepcion AFIP</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="./rutas/details.html">
-        <div class="card">
-          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
-          <div class="info-card">
-            <h1>MacBook Pro 15'4</h1>
-            <span>Space Gray</span>
-            <div class="price">
-              <h1>$750.000</h1>
-              <span>50% Off</span>
-            </div>
-            <span>Incluye inpuestos Pais y percepcion AFIP</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="./rutas/details.html">
-        <div class="card">
-          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
-          <div class="info-card">
-            <h1>MacBook Pro 15'4</h1>
-            <span>Space Gray</span>
-            <div class="price">
-              <h1>$750.000</h1>
-              <span>50% Off</span>
-            </div>
-            <span>Incluye inpuestos Pais y percepcion AFIP</span>
-          </div>
-        </div>
-      </a>
-
-      <a href="./rutas/details.html">
-        <div class="card">
-          <img src="./assets/mock2.jpg" alt="mock1" style="max-width: 250px;">
-          <div class="info-card">
-            <h1>MacBook Pro 15'4</h1>
-            <span>Space Gray</span>
-            <div class="price">
-              <h1>$750.000</h1>
-              <span>50% Off</span>
-            </div>
-            <span>Incluye inpuestos Pais y percepcion AFIP</span>
-          </div>
-        </div>
-      </a> -->
     </section>
   </main>
 
