creacion de tarjetas renderizado personalizaco

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
       </div>
     </a> -->
 
-    <section class="card-container">
+    <!-- <section class="card-container">
 
-    </section>
+    </section> -->
   </main>
 
   <footer>
@@ -122,7 +122,10 @@
   <script src="./scripts/nav-render.js"></script>
   <script src="./scripts/headerScrol.js"></script>
   <script src="https://kit.fontawesome.com/f1892a5318.js" crossorigin="anonymous"></script>
-  <script src="./scripts/product-card.js"></script>
+  <!-- <script src="./scripts/product-card.js"></script> -->
+  <script src="./scripts/product-card_new.js"></script>
+
+
 </body>
 
 </html>
