--- a/rutas/details.html
+++ b/rutas/details.html
@@ -89,7 +89,7 @@
       <div class="product-price">
         <span>total:</span>
         <div class="price-igv">
-          <h1>$750000</h1>
+          <h1 class="price-total_change"></h1>
           <p>Incluye Impuestos PAIS y percepcion AFIP. Podes recuperar AR$ 50711 haciendo la solicitud AFIP</p>
         </div>
         <div class="envio">
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="botones">
-          <input type="number" name="" id="" min="0" max="10">
+          <input type="number" name="" id="price-modifi_change" min="0" max="10">
           <button>añadir al carrito</button>
         </div>
       </div>
@@ -211,5 +211,7 @@
   <script src="../scripts/sliderImage.js"></script>
   <script src="../scripts/headerScrol.js"></script>
   <script src="https://kit.fontawesome.com/f1892a5318.js" crossorigin="anonymous"></script>
+
+  <script src="../scripts/price-total_change.js"></script>
 </body>
 </html>
